# rust-serverless-api

./: README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
rust_app/: Cargo.toml
rust_app/src/domain/: model.rs
rust_app/src/infrastructure/: db.rs
