[package]
name = "serverless_todos"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
aws-config = "1.5.5"
aws-sdk-dynamodb = "1.42.0"
lambda_http = "0.13.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[[bin]]
name = "PutToDo"
path = "src/bin/put_handlers.rs"

[[bin]]
name = "UpdateToDo"
path = "src/bin/update_handlers.rs"

[[bin]]
name = "GetToDo"
path = "src/bin/get_handlers.rs"

[[bin]]
name = "DeleteToDo"
path = "src/bin/delete_handlers.rs"
